# dissimilar

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dissimilar_diff.rs
src/: find.rs  lib.rs  range.rs  tests.rs
tests/: test.rs
