[package]
name = "dissimilar"
version = "1.0.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
rust-version = "1.31"
license = "Apache-2.0" # See the readme. The whole crate is Apache licensed. Some parts are additionally MIT licensed.
description = "Diff library with semantic cleanup, based on Google's diff-match-patch"
repository = "https://github.com/dtolnay/dissimilar"
documentation = "https://docs.rs/dissimilar"
keywords = ["diff"]
categories = ["algorithms", "text-processing"]
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
