[package]
name = "dissimilar-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
dissimilar = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "dissimilar_diff"
path = "fuzz_targets/dissimilar_diff.rs"
test = false
doc = false

[workspace]
